syntax = "proto3";

package product;

option go_package = "product-ms/internal/handler/grpc/pb";

// ----------- Message Definitions -----------

message Product {
  string id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateProductRequest {
  string title = 1;
  string description = 2;
  double price = 3;
}

message CreateProductResponse {
  Product product = 1;
}

message GetProductByIDRequest {
  string id = 1;
}

message GetProductByIDResponse {
  Product product = 1;
}

message GetAllProductsRequest {}

message GetAllProductsResponse {
  repeated Product products = 1;
}

message UpdateProductRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
}

message UpdateProductResponse {
  Product product = 1;
}

message DeleteProductRequest {
  string id = 1;
}

message DeleteProductResponse {
  string message = 1;
}

// ----------- Service Definition -----------

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc GetProductByID(GetProductByIDRequest) returns (GetProductByIDResponse);
  rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
}
